--- a/src/Person/Person.css
+++ b/src/Person/Person.css
@@ -6,3 +6,9 @@
     padding: 20px;
     text-align: center;
 }
+
+@media (min-width: 500px){
+    .Person{
+        width:'450px';
+    }
+}             
